refactor: API Find all Event
