# back-end-acara/src/controllers/event.controller.ts
@@ -1,13 +1,13 @@
 import { Response } from "express";
 import { IPaginationQuery, IReqUser } from "../utils/interfaces";
 import response from "../utils/response";
-import EventModel, { eventDAO, TEvent } from "../models/event.model";
+import EventModel, { eventDAO, TypeEvent } from "../models/event.model";
 import { FilterQuery, isValidObjectId } from "mongoose";
 
 export default {
     async create(req: IReqUser, res: Response) {
         try {
-            const payload = { ...req.body, createdBy: req.user?.id } as TEvent;
+            const payload = { ...req.body, createdBy: req.user?.id } as TypeEvent;
             await eventDAO.validate(payload);
             const result = await EventModel.create(payload);
             response.success(res, result, 'success to create event')
@@ -17,33 +17,49 @@ export default {
     },
     async findAll(req: IReqUser, res: Response) {
         try {
-            const {
-                page = 1,
-                limit = 10,
-                search
-            } = req.query as unknown as IPaginationQuery;
+            const buildQuery = (filter: any) => {
+                let query: FilterQuery<TypeEvent> = {};
 
-            const query: FilterQuery<TEvent> = {};
-            if (search) {
-                Object.assign(query, {
-                    ...query,
-                    $text: {
-                        $search: search
-                    }
-                })
-            }
+                if (filter.search) query.$text = { $search: filter.search };
+                if (filter.category) query.category = filter.category;
+                if (filter.isOnline) query.isOnline = filter.isOnline;
+                if (filter.isPublish) query.isPublish = filter.isPublish;
+                if (filter.isFeatured) query.isFeatured = filter.isFeatured;
+
+                return query;
+            };
+
+            const {
+                limit = 10,
+                page = 1,
+                search,
+                category,
+                isOnline,
+                isFeatured,
+                isPublish,
+            } = req.query;
+
+            const query = buildQuery({
+                search,
+                category,
+                isOnline,
+                isFeatured,
+                isPublish,
+            });
+
             const result = await EventModel.find(query)
-                .limit(limit)
-                .skip((page - 1) * limit)
+                .limit(+limit)
+                .skip((+page - 1) * +limit)
                 .sort({ createdAt: -1 })
+                .lean()
                 .exec();
 
             const count = await EventModel.countDocuments(query);
 
             response.pagination(res, result, {
                 total: count,
-                totalPages: Math.ceil(count / limit),
-                current: page,
+                totalPages: Math.ceil(count / +limit),
+                current: +page,
             }, "Success find all event")
         } catch (error) {
             response.error(res, error, 'Failed Find All event')
